--- a/OpenGL/Cube/cube.html
+++ b/OpenGL/Cube/cube.html
@@ -20,7 +20,7 @@
 <meta charset="UTF-8">
 <title>Unlit Cube Example</title>
 
-<script src="glsim.js"></script>  <!-- load the OpenGL 1.1 simulation code -->
+<script src="/glsim.js"></script>  <!-- load the OpenGL 1.1 simulation code -->
 
 <script>
 
