--- a/OpenGL/Clock/clock.html
+++ b/OpenGL/Clock/clock.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>COMP 274 - Đồ họa máy tính</title>
 
-    <script src="glsim.js"></script> <!-- load the OpenGL 1.1 simulation code -->
+    <script src="/glsim.js"></script> <!-- load the OpenGL 1.1 simulation code -->
     <script>
         var frameNumber = 0;
         var loop = loop || 0;
